--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
+title: Python tutorial
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -14,8 +14,12 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/python-tutor" # the subpath of your site, e.g. /blog
 url: "https://mshutov.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: mshutov
+github_username:  mshutov
+google_plus_username: МихаилШутов
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
+highlight: pygments
